{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 325,
  "lineage": "fe13cad9-09ab-0ff3-e751-abab4c0d196b",
  "resources": [
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-020cba7c55df1f615",
            "arn": "arn:aws:ec2:us-east-1:905418319105:instance/i-005238eebfedfb5e5",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-005238eebfedfb5e5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "jenkins",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c90996cc19f322c4",
            "private_dns": "ip-10-1-0-49.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.0.49",
            "public_dns": "ec2-52-71-135-79.compute-1.amazonaws.com",
            "public_ip": "52.71.135.79",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:905418319105:key/c8b3c53e-7052-46d8-a57f-7402d52445f8",
                "throughput": 125,
                "volume_id": "vol-00ad0c5accbd87415",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02580c24453f6740e",
            "tags": {
              "Environment": "prod",
              "Name": "nginx-cross-region-app-bastion-prod",
              "Owner": "1CH",
              "Project": "nginx-cross-region-app",
              "Role": "Bastion"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "nginx-cross-region-app-bastion-prod",
              "Owner": "1CH",
              "Project": "nginx-cross-region-app",
              "Role": "Bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-087d06ba6727889a0"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.bastion_sg.aws_security_group.this",
            "module.vpc_primary.aws_subnet.public",
            "module.vpc_primary.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.bastion_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418319105:security-group/sg-087d06ba6727889a0",
            "description": "Security group for Bastion host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-087d06ba6727889a0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from Admin CIDR",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Bastion-SG",
            "name_prefix": "",
            "owner_id": "905418319105",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Bastion-SG"
            },
            "tags_all": {
              "Name": "Bastion-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-04aa697611c26e485"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_primary.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_primary",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00fb4f2d647d5f2d6",
            "arn": "arn:aws:ec2:us-east-1:905418319105:elastic-ip/eipalloc-00fb4f2d647d5f2d6",
            "domain": "vpc",
            "id": "eipalloc-00fb4f2d647d5f2d6",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-231-74-126.compute-1.amazonaws.com",
            "public_ip": "34.231.74.126",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "us-east-1-main-vpc-nat-eip-1"
            },
            "tags_all": {
              "Name": "us-east-1-main-vpc-nat-eip-1"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09bf3e75be29d7807",
            "arn": "arn:aws:ec2:us-east-1:905418319105:elastic-ip/eipalloc-09bf3e75be29d7807",
            "domain": "vpc",
            "id": "eipalloc-09bf3e75be29d7807",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-98-86-73-210.compute-1.amazonaws.com",
            "public_ip": "98.86.73.210",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "us-east-1-main-vpc-nat-eip-2"
            },
            "tags_all": {
              "Name": "us-east-1-main-vpc-nat-eip-2"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc_primary",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418319105:internet-gateway/igw-087e7359fa0869cee",
            "id": "igw-087e7359fa0869cee",
            "owner_id": "905418319105",
            "tags": {
              "Name": "us-east-1-main-vpc-igw"
            },
            "tags_all": {
              "Name": "us-east-1-main-vpc-igw"
            },
            "vpc_id": "vpc-04aa697611c26e485"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_primary.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_primary",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00fb4f2d647d5f2d6",
            "association_id": "eipassoc-0a83bbef0b66a9590",
            "connectivity_type": "public",
            "id": "nat-0d80854aa21a915ae",
            "network_interface_id": "eni-0304be2d291cf4d8d",
            "private_ip": "10.1.0.249",
            "public_ip": "34.231.74.126",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-02580c24453f6740e",
            "tags": {
              "Name": "us-east-1-main-vpc-natgw-1"
            },
            "tags_all": {
              "Name": "us-east-1-main-vpc-natgw-1"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_primary.aws_eip.nat",
            "module.vpc_primary.aws_internet_gateway.this",
            "module.vpc_primary.aws_subnet.public",
            "module.vpc_primary.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09bf3e75be29d7807",
            "association_id": "eipassoc-03a6ac2d29caf37f1",
            "connectivity_type": "public",
            "id": "nat-0609c83f3828daf7a",
            "network_interface_id": "eni-029dfccae0517de01",
            "private_ip": "10.1.1.149",
            "public_ip": "98.86.73.210",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-079d6148ce86175cd",
            "tags": {
              "Name": "us-east-1-main-vpc-natgw-2"
            },
            "tags_all": {
              "Name": "us-east-1-main-vpc-natgw-2"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_primary.aws_eip.nat",
            "module.vpc_primary.aws_internet_gateway.this",
            "module.vpc_primary.aws_subnet.public",
            "module.vpc_primary.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_primary",
      "mode": "managed",
      "type": "aws_route",
      "name": "app-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-080bfabcfc6d95c511080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0d80854aa21a915ae",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-080bfabcfc6d95c51",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_primary.aws_eip.nat",
            "module.vpc_primary.aws_internet_gateway.this",
            "module.vpc_primary.aws_nat_gateway.this",
            "module.vpc_primary.aws_route_table.private-app",
            "module.vpc_primary.aws_subnet.public",
            "module.vpc_primary.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_primary",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-087e7359fa0869cee",
            "id": "r-rtb-0e115e26bd98eb2ba1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e115e26bd98eb2ba",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_primary.aws_internet_gateway.this",
            "module.vpc_primary.aws_route_table.public-web",
            "module.vpc_primary.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_primary",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418319105:route-table/rtb-080bfabcfc6d95c51",
            "id": "rtb-080bfabcfc6d95c51",
            "owner_id": "905418319105",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "APP-RT"
            },
            "tags_all": {
              "Name": "APP-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-04aa697611c26e485"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_primary.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_primary",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418319105:route-table/rtb-040962c153db8aa30",
            "id": "rtb-040962c153db8aa30",
            "owner_id": "905418319105",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "DB-RT"
            },
            "tags_all": {
              "Name": "DB-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-04aa697611c26e485"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_primary.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_primary",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418319105:route-table/rtb-0e115e26bd98eb2ba",
            "id": "rtb-0e115e26bd98eb2ba",
            "owner_id": "905418319105",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "WEB-RT"
            },
            "tags_all": {
              "Name": "WEB-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-04aa697611c26e485"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_primary.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_primary",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f14362822a47b783",
            "route_table_id": "rtb-080bfabcfc6d95c51",
            "subnet_id": "subnet-0877e96224303c858"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_primary.aws_route_table.private-app",
            "module.vpc_primary.aws_subnet.private",
            "module.vpc_primary.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09541ca3273d84ef0",
            "route_table_id": "rtb-080bfabcfc6d95c51",
            "subnet_id": "subnet-09dbcfdda365cbe43"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_primary.aws_route_table.private-app",
            "module.vpc_primary.aws_subnet.private",
            "module.vpc_primary.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_primary",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02e53bed5263eaf4b",
            "route_table_id": "rtb-040962c153db8aa30",
            "subnet_id": "subnet-01a53a1fcf62a1b04"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_primary.aws_route_table.private-db",
            "module.vpc_primary.aws_subnet.db",
            "module.vpc_primary.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01555be2c35f1ef9b",
            "route_table_id": "rtb-040962c153db8aa30",
            "subnet_id": "subnet-05a0b296a3a58a346"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_primary.aws_route_table.private-db",
            "module.vpc_primary.aws_subnet.db",
            "module.vpc_primary.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_primary",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-072383e04008f5123",
            "route_table_id": "rtb-0e115e26bd98eb2ba",
            "subnet_id": "subnet-02580c24453f6740e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_primary.aws_route_table.public-web",
            "module.vpc_primary.aws_subnet.public",
            "module.vpc_primary.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01d6a60e1bd1b6bba",
            "route_table_id": "rtb-0e115e26bd98eb2ba",
            "subnet_id": "subnet-079d6148ce86175cd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_primary.aws_route_table.public-web",
            "module.vpc_primary.aws_subnet.public",
            "module.vpc_primary.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_primary",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418319105:subnet/subnet-01a53a1fcf62a1b04",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01a53a1fcf62a1b04",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905418319105",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "us-east-1-main-vpc-db-1",
              "Tier": "DB"
            },
            "tags_all": {
              "Name": "us-east-1-main-vpc-db-1",
              "Tier": "DB"
            },
            "vpc_id": "vpc-04aa697611c26e485"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_primary.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418319105:subnet/subnet-05a0b296a3a58a346",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05a0b296a3a58a346",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905418319105",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "us-east-1-main-vpc-db-2",
              "Tier": "DB"
            },
            "tags_all": {
              "Name": "us-east-1-main-vpc-db-2",
              "Tier": "DB"
            },
            "vpc_id": "vpc-04aa697611c26e485"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_primary.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_primary",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418319105:subnet/subnet-0877e96224303c858",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0877e96224303c858",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905418319105",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "us-east-1-main-vpc-private-1",
              "Tier": "App"
            },
            "tags_all": {
              "Name": "us-east-1-main-vpc-private-1",
              "Tier": "App"
            },
            "vpc_id": "vpc-04aa697611c26e485"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_primary.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418319105:subnet/subnet-09dbcfdda365cbe43",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09dbcfdda365cbe43",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905418319105",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "us-east-1-main-vpc-private-2",
              "Tier": "App"
            },
            "tags_all": {
              "Name": "us-east-1-main-vpc-private-2",
              "Tier": "App"
            },
            "vpc_id": "vpc-04aa697611c26e485"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_primary.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_primary",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418319105:subnet/subnet-02580c24453f6740e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02580c24453f6740e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "905418319105",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "us-east-1-main-vpc-public-1",
              "Tier": "Web"
            },
            "tags_all": {
              "Name": "us-east-1-main-vpc-public-1",
              "Tier": "Web"
            },
            "vpc_id": "vpc-04aa697611c26e485"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_primary.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418319105:subnet/subnet-079d6148ce86175cd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-079d6148ce86175cd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "905418319105",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "us-east-1-main-vpc-public-2",
              "Tier": "Web"
            },
            "tags_all": {
              "Name": "us-east-1-main-vpc-public-2",
              "Tier": "Web"
            },
            "vpc_id": "vpc-04aa697611c26e485"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_primary.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_primary",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418319105:vpc/vpc-04aa697611c26e485",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0c55bf4907b583218",
            "default_route_table_id": "rtb-03e388b31ebcc449a",
            "default_security_group_id": "sg-0fa4fc6cb31a1d6d9",
            "dhcp_options_id": "dopt-0b89faef107f293ce",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04aa697611c26e485",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03e388b31ebcc449a",
            "owner_id": "905418319105",
            "tags": {
              "Name": "us-east-1-main-vpc"
            },
            "tags_all": {
              "Name": "us-east-1-main-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}